altera o html pra organizar a ordem das divs para que o z-index funcione corretamente. <<<<<< resolve o bug do carrocel por baixo do header >>>>>>>>>>>>>

--- a/wp-content/themes/sa2015/css/header.css
+++ b/wp-content/themes/sa2015/css/header.css
@@ -2,10 +2,17 @@
    ###       header      ###
    #########################*/
 
+.header-fixo {
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	left: 0px;
+	z-index: 200;
+}
+
 #header div.container {
 	background-color: #fff;
 	padding-top: 15px;
-	z-index: 1;
 }
 
 .navbar {
