--- a/wp-content/themes/sa2015/style.css
+++ b/wp-content/themes/sa2015/style.css
@@ -24,11 +24,14 @@ body {
    ###    HOME    ###
    ##################*/
 
-#myCarousel.carousel {
-position: relative;
+
+div#myCarousel {
 padding: 0px;
-z-index: -10;
-top: -112px;
+margin-bottom: 40px;
+}
+
+a.carousel-control {
+background: black;
 }
 
 .carousel-control {
@@ -36,11 +39,16 @@ position: absolute;
 top: 150px;
 left: 0;
 bottom: 150px;
-width: 100px;
+width: 50px;
 opacity: 0.5;
 filter: alpha(opacity=50);
 font-size: 20px;
 color: #ffffff;
 text-align: center;
 text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+}
+
+.carousel-caption {
+background: #19ADAD;
+opacity: 0.75;
 }
